--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <div class="col-xs-12">
                 <div id="categs-slider" class="home-categories owl-carousel owl-theme">
                     <div class="home-categories-item">
-                        <a href="categoria.html?nombre=Cocinas">
+                        <a href="categoria.html?nombre=Cocinas, anafes y purificadores&subcategoria=Cocinas">
                             <img class="home-categories-img" src="images/owl_carrusel/cocinas_owl_carrusel-removebg-preview.png" alt="Cocinas">
                             <div class="home-categories-name">Cocinas</div>
                         </a>
@@ -262,9 +262,9 @@
                         </a>
                     </div>
                     <div class="home-categories-item">
-                        <a href="categoria.html?nombre=Termotanques">
+                        <a href="categoria.html?nombre=Termotanques y calefones">
                             <img class="home-categories-img" src="images/owl_carrusel/Termot_Rheem_80_lts_pie_carga_sup_GN_Gris_tgnp080rh_1-removebg-preview.png" alt="Termotanques">
-                            <div class="home-categories-name">Termotanques</div>
+                            <div class="home-categories-name">Termotanques y <br>Calefones</div>
                         </a>
                     </div>
                     <div class="home-categories-item">
@@ -280,12 +280,12 @@
 </section>
 
 <!-- Video Section -->
-<!--<section class="video-section">
+<section class="video-section">
     <div class="container">
-        <h2 class="video-title">Estas son nuestras ofertas de esta semana!!!</h2>
+        <h2 class="video-title">Estas son nuestras ofertas del Dia de la Niñez!!!</h2>
         <div class="video-container">
             <video controls autoplay muted loop poster="images/poster_celulares.jpg">
-                <source src="videos/celulares_18_07_2025.mp4" type="video/mp4">
+                <source src="videos/bicicletas_dia_de_la_ninez.mp4" type="video/mp4">
                     Tu navegador no soporta la reproducción de videos.
             </video>
         </div>
