--- a/index.html
+++ b/index.html
@@ -169,19 +169,19 @@
     <div class="carousel">
         <div class="carousel-slides">
             <div class="slide active">
-                <img src="images/banner_logo.webp" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+            <img src="images/banner_logo.webp" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/freidoradeKanjiHome.jpg" alt="Freidora Kanji" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+            <img src="images/a9bda61ac9a661cabafcfa837f6fffa369dd0095_DiadelNiño.jpg" alt="Dia del niño" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/freidoradeAirePhilco.jpg" alt="Freidora Philco" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/f1d5e1195bc2fc6805c443504d63f1eed312058b_DiadelNiño-tabletsky.jpg" alt="Tablet" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="carrusel/freidoradeAireUltracomb.jpg" alt="Freidora Ultracomb" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+                <img src="images/27e71f5e73179012502728992ccd1141856a4aa5_bicicletainfanti.jpg" alt="Freidora Ultracomb" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="images/televisores_ofertas_aoc.jpg" alt="Televisores oferta AOC" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+            <img src="images/televisores_ofertas_aoc.jpg" alt="Televisores oferta AOC" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
                 <img src="carrusel/lavado_perfecto_1.jpg" alt="Kohinoor Banner" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
