--- a/index.html
+++ b/index.html
@@ -172,13 +172,10 @@
             <img src="images/banner_logo.webp" alt="Logo" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-            <img src="images/a9bda61ac9a661cabafcfa837f6fffa369dd0095_DiadelNiño.jpg" alt="Dia del niño" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+            <img src="carrusel/ca5195e2-88b8-420e-a107-185ceaefb004.jpg" alt="Dia del niño" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
-                <img src="images/f1d5e1195bc2fc6805c443504d63f1eed312058b_DiadelNiño-tabletsky.jpg" alt="Tablet" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
-            </div>
-            <div class="slide">
-                <img src="images/27e71f5e73179012502728992ccd1141856a4aa5_bicicletainfanti.jpg" alt="Freidora Ultracomb" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
+            <img src="carrusel/fefb2777f3dee8dc7e5b05cc590d4347af971c96_SemanadeColchon.jpg" alt="Tablet" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
             </div>
             <div class="slide">
             <img src="images/televisores_ofertas_aoc.jpg" alt="Televisores oferta AOC" loading="lazy" onerror="this.onerror=null; this.src='images/nomedia_trans.png';">
