--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
 <!-- Video Section -->
 <section class="video-section">
     <div class="container">
-        <h2 class="video-title">Estas son nuestras ofertas del Dia de la Niñez!!!</h2>
+        <h2 class="video-title">Estas son nuestras ofertas de la semana!!!</h2>
         <div class="video-container">
             <video controls autoplay muted loop poster="images/poster_celulares.jpg">
-                <source src="videos/bicicletas_dia_de_la_ninez.mp4" type="video/mp4">
+                <source src="videos/colchon.mp4" type="video/mp4">
                     Tu navegador no soporta la reproducción de videos.
             </video>
         </div>
