--- a/busqueda.html
+++ b/busqueda.html
@@ -69,7 +69,13 @@
                 <li><a href="categoria.html?nombre=Cocinas, anafes y purificadores&subcategoria=Purificadores">Purificadores</a></li>
             </ul>
         </li>
-        <li><a href="categoria.html?nombre=Heladeras">Heladeras</a></li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Heladeras y freezers">Heladeras y freezers</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Heladeras y freezers&subcategoria=Heladeras">Heladeras</a></li>
+                <li><a href="categoria.html?nombre=Heladeras y freezers&subcategoria=Freezers">Freezers</a></li>
+            </ul>
+        </li>
         <li class="has-submenu">
             <a href="categoria.html?nombre=Tv y audio">Tv y Audio</a>
             <ul class="submenu">
