--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <li class="has-submenu">
             <a href="categoria.html?nombre=Heladeras y freezers">Heladeras y freezers</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Tv y audio&subcategoria=Heladeras">Heladeras</a></li>
-                <li><a href="categoria.html?nombre=Tv y audio&subcategoria=Freezers">Freezers</a></li>
+                <li><a href="categoria.html?nombre=Heladeras y freezers&subcategoria=Heladeras">Heladeras</a></li>
+                <li><a href="categoria.html?nombre=Heladeras y freezers&subcategoria=Freezers">Freezers</a></li>
             </ul>
         </li>
         <li class="has-submenu">
