--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Header -->
-    index.html<header class="header">
+    <header class="header">
         <div class="container">
             <div class="header-content">
                 <div class="logo">
@@ -71,7 +71,13 @@
                 <li><a href="categoria.html?nombre=Cocinas, anafes y purificadores&subcategoria=Purificadores">Purificadores</a></li>
             </ul>
         </li>
-        <li><a href="categoria.html?nombre=Heladeras">Heladeras</a></li>
+        <li class="has-submenu">
+            <a href="categoria.html?nombre=Heladeras y freezers">Heladeras y freezers</a>
+            <ul class="submenu">
+                <li><a href="categoria.html?nombre=Heladeras y freezers&subcategoria=Heladeras">Heladeras</a></li>
+                <li><a href="categoria.html?nombre=Heladeras y freezers&subcategoria=Freezers">Freezers</a></li>
+            </ul>
+        </li>
         <li class="has-submenu">
             <a href="categoria.html?nombre=Tv y audio">Tv y Audio</a>
             <ul class="submenu">
