--- a/categoria.html
+++ b/categoria.html
@@ -330,7 +330,7 @@ const atributosPorCategoria = {
         "Ladrillos refractarios"
         
     ],
-    "heladeras": [
+    "heladeras y freezers": [
         "Dimensiones",
         "Capacidad (Litros)",
         "Tipo de tecnologia",
@@ -859,4 +859,5 @@ updateDynamicFilters(categoria, subcategoria);
 filtrarProductos();
 </script>
 </body>
+
 </html>
