--- a/index.html
+++ b/index.html
@@ -366,6 +366,24 @@
     <!-- /Popup Newsletter -->
 
 
+<!-- === Chatbot Obelisquín === -->
+<div id="chatbot-container">
+  <div id="chatbot-header">
+    <img src="images/file-removebg-preview.png" alt="Obelisquín" id="chatbot-avatar">
+    <span>Obelisquín 𓉶</span>
+    <button id="chatbot-close">&times;</button>
+  </div>
+  <div id="chatbot-messages"></div>
+  <div id="chatbot-input-area">
+    <input type="text" id="chatbot-input" placeholder="Escribí tu consulta...">
+    <button id="chatbot-send">Enviar</button>
+  </div>
+</div>
+
+<button id="chatbot-toggle">💬</button>
+<!-- ========================== -->
+
+
 
     <!-- Script -->
      <!-- jQuery -->
@@ -533,6 +551,9 @@ $(document).ready(function(){
         }
     });
 });
+
+
+
 </script>
 </body>
 </html>
