--- a/producto.html
+++ b/producto.html
@@ -10,7 +10,8 @@
     <link rel="icon" href="images/logo.webp" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body class="product-page">
+<body class="product-page-body">
+
     <!-- Header -->
         <header class="header">
         <div class="container">
