--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 </section>
 
 <!-- Video Section -->
-<section class="video-section">
+<!--<section class="video-section">
     <div class="container">
         <h2 class="video-title">Estas son nuestras ofertas de la semana!!!</h2>
         <div class="video-container">
